kubernetes/apps/security/pocket-id/referencegrant.yaml
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pocket-id-default
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pocket-id-media
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: media
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pocket-id-observability
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: observability
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/referencegrant_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: pocket-id-volsync-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: volsync-system
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
