kubernetes/apps/security/pocket-id/networkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: pocket-id-egress-external
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/name: pocket-id
    egress:
      - toFQDNs:
          - matchName: download.maxmind.com
          - matchPattern: mm-prod-geoip-databases.*.r2.cloudflarestorage.com
        toPorts:
          - ports:
              - port: "443"
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: pocket-id-egress-label
specs:
  - endpointSelector:
      matchLabels:
        egress.cilium.io/auth: "true"
    egress:
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/name: pocket-id
        toPorts:
          - ports:
              - port: "80"
      # via envoy, when pods use id.${ROOT_DOMAIN}
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: network
              gateway.envoyproxy.io/owning-gateway-name: envoy-internal
        toPorts:
          - ports:
              - port: "10443"
